# jogo_da_velha

./: .clang-format  CMakeLists.txt  board.cpp  board.hpp  grid.hpp  main.cpp
include/: grid.hpp
src/: grid.cpp  main.cpp
